# cyber-care-test-case

./: Makefile  README.md  pyproject.toml
consumer/events/: models.py  views.py
consumer/events/migrations/: 0001_initial.py
consumer/project/: settings.py  urls.py
producer/: events.json  main.py
